Ὲκδοση 2.6.2 2022-02-24. (Φίλτρο s.Ivesta)