@@ -5,6 +5,7 @@
  */
 package equipment;
 
+import java.lang.reflect.InvocationTargetException;
 import java.sql.Connection;
 import java.sql.DriverManager;
 import java.sql.PreparedStatement;
@@ -22,6 +23,7 @@ public class ConnectionEquipment {
     private Statement statement;
     private final String the_host, the_database, the_username;
     
+    
 //    private final String the_database, the_username, derDateiname, derDateiname1, derDateiname_d, dieTabelle, dieGerichtstabelle, derGruppenID, derGruppenname, dieAusfuhrfelder;
 
     /**
@@ -36,19 +38,6 @@ public class ConnectionEquipment {
         the_host = host;
     }
     
-//    public MyConnection(String db, String einDateiname, String einDateiname1, String einDateiname_d, String eineTabelle, String eineGerichtstabelle, String eineGruppenID, String einGruppenname, String un, String Ausfuhrfelder) {
-//	the_database = db;
-//	the_username = un;
-//	derDateiname = einDateiname;
-//	derDateiname1 = einDateiname1;
-//	derDateiname_d = einDateiname_d;
-//	dieGerichtstabelle = eineGerichtstabelle;
-//	derGruppenID = eineGruppenID;
-//	derGruppenname = einGruppenname;
-//	dieTabelle = eineTabelle;
-//	dieAusfuhrfelder = Ausfuhrfelder;
-//    }    
-
     /**
      *
      * @param password password
@@ -57,10 +46,13 @@ public class ConnectionEquipment {
      * @throws java.lang.InstantiationException
      * @throws java.sql.SQLException
      * @throws java.lang.IllegalAccessException
+     * @throws java.lang.NoSuchMethodException
+     * @throws java.lang.reflect.InvocationTargetException
      */
-    public String connect(String password) throws ClassNotFoundException, InstantiationException, SQLException, IllegalAccessException {
+    public String connect(String password) throws ClassNotFoundException, InstantiationException, SQLException, IllegalAccessException, NoSuchMethodException, IllegalArgumentException, InvocationTargetException {
 	String res;
-	Class.forName("com.mysql.jdbc.Driver").newInstance();
+//	Class.forName("com.mysql.jdbc.Driver").newInstance();
+        Class.forName("com.mysql.cj.jdbc.Driver").getDeclaredConstructor().newInstance();
 	myConnection = DriverManager.getConnection("jdbc:mysql://" + the_host + ":3306/"
 		+ the_database + "?characterEncoding=utf8", the_username, password);
 	statement = myConnection.createStatement();
@@ -68,6 +60,10 @@ public class ConnectionEquipment {
 	return res;
     }
 
+    /**
+     *
+     * @return
+     */
     public String disconnect() {
 	String res;
 	res = "";
@@ -90,15 +86,30 @@ public class ConnectionEquipment {
 	return res;
     }
     
+    /**
+     *
+     * @param statement
+     * @return
+     * @throws SQLException
+     */
     public PreparedStatement prepareStatement(String statement) throws SQLException {
 	PreparedStatement ps = myConnection.prepareStatement(statement);
 	return ps;
     }
 
+    /**
+     *
+     * @return
+     */
     public String get_username() {
 	return the_username;
     }
     
+    /**
+     *
+     * @return
+     * @throws SQLException
+     */
     public String[][] get_users() throws SQLException {
 	int i;
 	String[][] result;
@@ -106,7 +117,7 @@ public class ConnectionEquipment {
 	result = null;
 	if (myConnection != null) {
 	    result = new String[2][get_count("Vartotojai")];
-	    resultSet = statement.executeQuery("SELECT ID, Vardas FROM Vartotojai ORDER BY Vardas");
+	    resultSet = statement.executeQuery("SELECT ID, Pavadinimas FROM Vartotojai ORDER BY Pavadinimas");
 	    i = 0;
 	    while (resultSet.next()) {
 		result[0][i] = resultSet.getString(1);
@@ -120,35 +131,21 @@ public class ConnectionEquipment {
 
     /**
      *
+     * @param table
+     * @param field1
+     * @param field2
+     * @param orderBy
      * @return [0] – TID, [1] – TName
      * @throws SQLException
      */
-//    public String[][] getEquipmentTypes() throws SQLException {
-//	int i;
-//	String[][] result;
-//	ResultSet resultSet;
-//	result = null;
-//	if (myConnection != null) {
-//	    result = new String[2][get_count("IrangosTipai")];
-//	    resultSet = statement.executeQuery("SELECT ID, Pavadinimas FROM IrangosTipai ORDER BY Pavadinimas");
-//	    i = 0;
-//	    while (resultSet.next()) {
-//		result[0][i] = resultSet.getString(1);
-//		result[1][i] = resultSet.getString(2);
-//		i++;
-//	    }
-//	}
-//	return result;
-//    }
-
-    public String[][] getList(String table) throws SQLException {
+    public String[][] getList(String table, String field1, String field2, String orderBy) throws SQLException {
 	int i;
 	String[][] result;
 	ResultSet resultSet;
 	result = null;
 	if (myConnection != null) {
 	    result = new String[2][get_count(table)];
-	    resultSet = statement.executeQuery("SELECT ID, Pavadinimas FROM ".concat(table).concat(" ORDER BY Pavadinimas"));
+	    resultSet = statement.executeQuery("SELECT " + field1 + ", " + field2 + " FROM ".concat(table).concat(" ORDER BY ").concat(orderBy));//Pavadinimas"));
 	    i = 0;
 	    while (resultSet.next()) {
 		result[0][i] = resultSet.getString(1);
@@ -158,117 +155,62 @@ public class ConnectionEquipment {
 	}
 	return result;
     }
-            
-            
-//    public String[][] getSystems() throws SQLException {
-//	int i;
-//	String[][] result;
-//	ResultSet resultSet;
-//	result = null;
-//	if (myConnection != null) {
-//	    result = new String[2][get_count("Sistemos")];
-//	    resultSet = statement.executeQuery("SELECT ID, Pavadinimas FROM Sistemos ORDER BY Pavadinimas");
-//	    i = 0;
-//	    while (resultSet.next()) {
-//		result[0][i] = resultSet.getString(1);
-//		result[1][i] = resultSet.getString(2);
-//		i++;
-//	    }
-//	}
-//	return result;
-//    }
-
-//    public String[][] getWorkTypes() throws SQLException {
-//	int i;
-//	String[][] result;
-//	ResultSet resultSet;
-//	result = null;
-//	if (myConnection != null) {
-//	    result = new String[2][get_count("Darbotipis")];
-//	    resultSet = statement.executeQuery("SELECT ID, Pavadinimas FROM Darbotipis ORDER BY Pavadinimas");
-//	    i = 0;
-//	    while (resultSet.next()) {
-//		result[0][i] = resultSet.getString(1);
-//		result[1][i] = resultSet.getString(2);
-//		i++;
-//	    }
-//	}
-//	return result;
-//    }
-
-//    public String[][] getStates_of_works() throws SQLException {
-//	int i;
-//	String[][] result;
-//	ResultSet resultSet;
-//	result = null;
-//	if (myConnection != null) {
-//	    result = new String[2][get_count("Busenos")];
-//	    resultSet = statement.executeQuery("SELECT ID, Busena FROM Busenos ORDER BY Busena");
-//	    i = 0;
-//	    while (resultSet.next()) {
-//		result[0][i] = resultSet.getString(1);
-//		result[1][i] = resultSet.getString(2);
-//		i++;
-//	    }
-//	}
-//	return result;
-//    }
-//
-//    public String[][] getStates_of_generators() throws SQLException {
-//	int i;
-//	String[][] result;
-//	ResultSet resultSet;
-//	result = null;
-//	if (myConnection != null) {
-//	    result = new String[2][get_count("Gen_busenos")];
-//	    resultSet = statement.executeQuery("SELECT ID, Busena FROM Gen_busenos ORDER BY Busena");
-//	    i = 0;
-//	    while (resultSet.next()) {
-//		result[0][i] = resultSet.getString(1);
-//		result[1][i] = resultSet.getString(2);
-//		i++;
-//	    }
-//	}
-//	return result;
-//    }
+    
+    public String[][] getList(String table, String[] fields, String orderByField) throws SQLException {
+	int i, l;
+        StringBuilder sb;
+	String[][] result;
+	ResultSet resultSet;
+	result = null;
+	if (myConnection != null) {
+            l = fields.length;
+	    result = new String[l][get_count(table)];
+            sb = new StringBuilder("SELECT ");
+            for (int j = 0; j < l; j++) {
+                sb.append(fields[j]);
+                if (j < l-1) {
+                    sb.append(", ");
+                }
+            }
+            sb.append(" FROM ").append(table).append(" ORDER BY ").append(orderByField);
+	    resultSet = statement.executeQuery(sb.toString());
+	    i = 0;
+	    while (resultSet.next()) {
+                for (int j = 0; j < l; j++) {
+                    result[j][i] = resultSet.getString(j+1);
+                }
+		i++;
+	    }
+	}
+	return result;
+    }
     
 
-//    public String[][] getLocations() throws SQLException {
-//	int i;
-//	String[][] result;
-//	ResultSet resultSet;
-//	result = null;
-//	if (myConnection != null) {
-//	    result = new String[2][get_count("Vietos")];
-//	    resultSet = statement.executeQuery("SELECT ID, Pavadinimas FROM Vietos ORDER BY Pavadinimas");
-//	    i = 0;
-//	    while (resultSet.next()) {
-//		result[0][i] = resultSet.getString(1);
-//		result[1][i] = resultSet.getString(2);
-//		i++;
-//	    }
-//	}
-//	return result;
-//    }
-
-//    public String[][] getCodes() throws SQLException {
-//	int i;
-//	String[][] result;
-//	ResultSet resultSet;
-//	result = null;
-//	if (myConnection != null) {
-//	    result = new String[2][get_count("Veiklos")];
-//	    resultSet = statement.executeQuery("SELECT ID, Pavadinimas FROM Veiklos ORDER BY Pavadinimas");
-//	    i = 0;
-//	    while (resultSet.next()) {
-//		result[0][i] = resultSet.getString(1);
-//		result[1][i] = resultSet.getString(2);
-//		i++;
-//	    }
-//	}
-//	return result;
-//    }
-
+    public String[] getNetworks() throws SQLException {
+        String TABLE = "Potinkliai";
+	int i;
+	String[] result;
+	ResultSet resultSet;
+	result = null;
+	if (myConnection != null) {
+	    result = new String[get_count(TABLE)];
+	    resultSet = statement.executeQuery("SELECT IP FROM ".concat(TABLE));
+	    i = 0;
+	    while (resultSet.next()) {
+		result[i] = resultSet.getString(1);
+		i++;
+	    }
+	}
+	return result;
+    }
+    
+    
+    /**
+     *
+     * @param sortFeldname
+     * @return
+     * @throws SQLException
+     */
     public String[][] getEquipment(String sortFeldname) throws SQLException {
 	int i;
 	String[][] result;
@@ -299,119 +241,6 @@ public class ConnectionEquipment {
 	return statement.executeUpdate(the_statement);
     }
 
-//    public void fuehre_aus() throws SQLException {
-//	statement.executeQuery("SELECT ".concat(dieAusfuhrfelder).concat(" FROM ").concat(dieTabelle).concat(" INTO OUTFILE '").concat(derDateiname).concat("'"));
-//    }
-
-//    /**
-//     *
-//     * @param dieAnweisung
-//     * @throws SQLException
-//     */
-//    public void fuehrt_aus(String dieAnweisung) throws SQLException {
-//	statement.executeQuery(dieAnweisung);
-//    }
-
-//    /**
-//     *
-//     * @param dieAnweisung
-//     * @throws SQLException
-//     */
-//    public void fuehrt_ein(String dieAnweisung) throws SQLException {
-//	statement.executeUpdate(dieAnweisung);
-//    }
-//
-//    /**
-//     *
-//     * @param derTabellenname
-//     * @param derAusfuhrdateiname
-//     * @throws SQLException
-//     */
-//    public void fuehre_aus(String derTabellenname, String derAusfuhrdateiname) throws SQLException {
-//	statement.executeQuery("SELECT * FROM ".concat(derTabellenname).concat(" INTO OUTFILE '").concat(derAusfuhrdateiname).concat("'"));
-//    }
-//
-//    /**
-//     *
-//     * @param abDatum
-//     * @throws SQLException
-//     */
-//    public void fuehre_aus_ab(String abDatum) throws SQLException {
-//	statement.executeQuery("SELECT ".concat(dieAusfuhrfelder).concat(" FROM ").concat(dieTabelle).concat(" WHERE VdieZeit >= '").concat(abDatum).concat("' INTO OUTFILE '").concat(derDateiname1).concat("'"));
-//    }
-//
-//    /**
-//     *
-//     * @param dasDatum
-//     * @throws SQLException
-//     */
-//    public void fuehre_aus_am(String dasDatum) throws SQLException {
-//	statement.executeQuery("SELECT ".concat(dieAusfuhrfelder).concat(" FROM ").concat(dieTabelle).concat(" WHERE VdieZeit LIKE '").concat(dasDatum).concat("%' INTO OUTFILE '").concat(derDateiname_d).concat("'"));
-//    }
-//
-//    public int loescht_alles() throws SQLException {
-//	return statement.executeUpdate(("TRUNCATE ").concat(dieTabelle));
-//    }
-//
-//    public int loescht_alles_aus_derTabelle(String derTabellenname) throws SQLException {
-//	return statement.executeUpdate(("TRUNCATE ").concat(derTabellenname));
-//    }
-//
-//    public int loescht_entsprechend_demDatum(String einDatum) throws SQLException {
-//	return statement.executeUpdate(("DELETE FROM ").concat(dieTabelle).concat(" WHERE VdieZeit LIKE '%").concat(einDatum).concat("%'"));
-//    }
-//
-//    public int loescht_ab_Datum(String einDatum) throws SQLException {
-//	return statement.executeUpdate(("DELETE FROM ").concat(dieTabelle).concat(" WHERE VdieZeit >= '").concat(einDatum).concat("'"));
-//    }
-//
-//    public int loescht_aus_derTabelle(String dieAnweisung) throws SQLException {
-//	return statement.executeUpdate(dieAnweisung);
-//    }
-//
-    /**
-     * Es wird versucht dieVerzerrung.dat und dieVerzerrung1.dat einzuführen
-     *
-     * @param einDateiname
-     * @return die Anzahl der Datensätze; falls wurde keine Datei gefunden –
-     * eine Fehlermeldung
-     * @throws SQLException
-     */
-//    public String fuehre_ein_in_eineTabelle(String einDateiname) throws SQLException {
-//	String eingefuehrt;
-//	eingefuehrt = "";
-//	if (Files.exists(Paths.get(derDateiname))) {
-//            loescht_alles_aus_derTabelle();
-//	    eingefuehrt = fuehre_ein_in_eineTabelle(derDateiname);
-//	}
-//	if (Files.exists(Paths.get(derDateiname_d))) {
-//	    eingefuehrt = eingefuehrt.concat(fuehre_ein_in_eineTabelle(derDateiname_d));
-//	}
-//	if (Files.exists(Paths.get(derDateiname1))) {
-//	    eingefuehrt = eingefuehrt.concat(fuehre_ein_in_eineTabelle(derDateiname1));
-//	}
-//	if (eingefuehrt.isEmpty()) {
-//	    eingefuehrt = "Es wurde weder ".concat(derDateiname).concat(" noch ").concat(derDateiname1).concat(" gefunden!");
-//	}
-//        return eingefuehrt;
-//    }
-//    public String fuehre_ein_in_eineTabelle(String einDateiname) throws SQLException {
-//	String eingefuehrt;
-//	eingefuehrt = String.valueOf(statement.executeUpdate("LOAD DATA INFILE '".concat(einDateiname).concat("' INTO TABLE ").concat(dieTabelle).concat(" (").concat(dieAusfuhrfelder).concat(")")));
-//	if (eingefuehrt.isEmpty()) {
-//	    eingefuehrt = "Es wurde weder ".concat(derDateiname).concat(" noch ").concat(derDateiname1).concat(" gefunden!");
-//	}
-//	return eingefuehrt;
-//    }
-//
-//    public String fuehre_ein(String derTabellenname, String derAusfuhrdateiname) throws SQLException {
-//	String eingefuehrt;
-//	statement.executeUpdate(("TRUNCATE ").concat(derTabellenname));
-////    eingefuehrt = String.valueOf(statement.executeUpdate("LOAD DATA INFILE '/home/a/Dokumente/Dateisicherungen/pagr.dat' INTO TABLE pagr (pdata, ppavad, pkiekis, pkaina, pskyrius)"));
-//	eingefuehrt = String.valueOf(statement.executeUpdate("LOAD DATA INFILE '".concat(derAusfuhrdateiname).concat("' INTO TABLE ").concat(derTabellenname)));
-//	return eingefuehrt;
-//    }
-
     private int get_count(String table) {
 	int n;
 	ResultSet rs;
@@ -428,29 +257,42 @@ public class ConnectionEquipment {
 	return n;
     }
 
-//    public String bekommt_letzteGID() {
-//	String res;
-//	ResultSet resultSet;
-//	res = "";
-//	try {
-//	    resultSet = statement.executeQuery("SELECT GID FROM dasGericht ORDER BY GID DESC LIMIT 1");
-//	    if (resultSet.next()) {
-//		res = resultSet.getString("GID");
-//	    }
-//	    resultSet.close();
-//	} catch (SQLException | NullPointerException ex) {
-//	    res = ex.getMessage();
-//	}
-//	return res;
-//    }
-
+    /**
+     *
+     * @param query
+     * @return
+     * @throws SQLException
+     */
     public ResultSet executeQuery(String query) throws SQLException {
 	ResultSet rs;
 	rs = statement.executeQuery(query);
 	return rs;
     }
+    
+    public String[][] getElevators() throws SQLException {
+	int i;
+	String[][] result;
+	ResultSet resultSet;
+	result = null;
+	if (myConnection != null) {
+	    result = new String[get_count("Liftai")][2];
+	    resultSet = statement.executeQuery("SELECT RegNr, Vieta FROM Liftai");
+	    i = 0;
+	    while (resultSet.next()) {
+		result[i][0] = resultSet.getString(1);
+		result[i][1] = resultSet.getString(2);
+		i++;
+	    }
+	}
+	return result;
+    }
 
-    String[][] getTPtypes() throws SQLException {
+    /**
+     *
+     * @return
+     * @throws SQLException
+     */
+    public String[][] getTPtypes() throws SQLException {
 	int i;
 	String[][] result;
 	ResultSet resultSet;
@@ -467,47 +309,7 @@ public class ConnectionEquipment {
 	}
 	return result;
     }
-
-//    private String die_anzahl_der_tage(String dasdatum, String dieTabelle) {
-//	return "SELECT COUNT( DISTINCT DATE_FORMAT( VdieZeit, '%Y-%m-%d' )) FROM " + dieTabelle + " WHERE VdieZeit LIKE '" + dasdatum + "%'";
-//    }
-//
-//    public int bekomme_die_anzahl_der_tage(String dasdatum, String dieTabelle) throws SQLException {
-//	Statement stmt1 = null;
-//	ResultSet resultSet = null;
-//	int res;
-//	res = 0;
-//	stmt1 = myConnection.createStatement();
-//	resultSet = stmt1.executeQuery(die_anzahl_der_tage(dasdatum, dieTabelle));
-//	resultSet.next();
-//	res = Integer.valueOf(String.valueOf(resultSet.getObject(1)));
-//	resultSet.close();
-//	stmt1.close();
-//	return res;
-//    }
-
-    /**
-     *
-     * @param gid
-     * @return 0 – GdieEiweisse,<br>1 – GdieFette,<br>2 –
-     * GdieKohlenhydrate,<br>3 – GdieAnmerkung,<br>4 – kcal
-     * @throws SQLException
-     */
-//    public String[] bekommt_dieGerichtsangaben(String gid) throws SQLException {
-//	String[] res;
-//	ResultSet resultSet;
-//	res = new String[6];
-//	resultSet = statement.executeQuery("SELECT GdieEiweisse, GdieFette, GdieKohlenhydrate, GdieAnmerkung, GdieBenennung FROM dasGericht WHERE GID=".concat(gid));
-//	while (resultSet.next()) {
-//	    res[0] = String.valueOf(resultSet.getObject("GdieEiweisse"));
-//	    res[1] = String.valueOf(resultSet.getObject("GdieFette"));
-//	    res[2] = String.valueOf(resultSet.getObject("GdieKohlenhydrate"));
-//	    res[3] = String.valueOf(resultSet.getObject("GdieAnmerkung"));
-//	    res[4] = String.valueOf(Math.round((Float.parseFloat(res[0]) + Float.parseFloat(res[2])) * 4.1 + Float.parseFloat(res[1]) * 9.3));
-//	    res[5] = String.valueOf(resultSet.getObject("GdieBenennung"));
-//	}
-//	resultSet.close();
-//	return res;
-//    }
+    
+     
 
 }
